fix style for scrolling and visibiity.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,15 +32,17 @@ html, body
 #messages {
     margin: 5px;
     list-style-type: none; padding: 0;
-    overflow-y: scroll;
+    overflow-x: hidden;
     height:80vh;
     width: 500px;
     background-color: white;
     border-radius: 12px;
-    visibility: hidden;
 }
 
-#messages li { padding: 5px 10px; background: rgb(153, 204, 255); }
+#messages li {
+    padding: 5px 10px;
+    background: rgb(153, 204, 255);
+}
 
 #messages li:nth-child(odd)
 {
@@ -54,7 +56,8 @@ html, body
 
 form {
     margin: 5px;
-    padding: 3px; position: fixed; bottom: 0;
+    #padding: 3px; position: fixed; bottom: 0;
+    position: relative;
     width: 520px;
 }
 
@@ -65,8 +68,6 @@ form input {
     width: 400px;
     margin-right: 5px;
     border-radius: 12px;
-
-
 }
 
 form button {
